updating schedule for finals week

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -14,8 +14,10 @@
             <h2>What's Open Right Now?</h2>
             <div id="current_date"></div>
             <div id="fall_schedule"></div>
+            <p id="finalsweek_schedule"></p>
             <div class="dininglocations">
             <p id="pit_schedule"></p>
+            <p id="rockys_schedule"></p>
             <p id="starbucks_schedule"></p>
             <p id="connections_schedule"></p>
             <p id="hillside_schedule"></p>
