adding finals week hours

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -39,7 +39,7 @@
             <section class="lead">
          <h2 class="full-width">Dining Locations</h2>
          <figure>
-            <img src="../static/hoursofoperation.png" alt="Fall Hours of Operation" id="hoursofop">
+            <img src="../static/finalsweekhours.png" alt="Final Exam Week/Reading Period Schedule" id="hoursofop">
             <figcaption>Chart made by &nbsp;<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab</figcaption>
          </figure>
          <div class="futureplans">
