changing month to 11

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -28,6 +28,7 @@
             <p id="eastmandinner_schedule"></p>
             <p id="grabngo_schedule"></p>
             <p id="peets_schedule"></p>
+            <p id="danforthbreak_schedule"></p>
             <p id="danforthlunch_schedule"></p>
             <p id="danforthdinner_schedule"></p>
             <p id="californiarollin_schedule"></p>
